--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requests = "^2.23.0"
 apache-airflow = {extras = ["google_auth"], version = "^1.10.13"}
 searchconsole = "^0.0.4"
 google-cloud-bigquery = "<2.8.0"
+pycontw-report-generator = "^1.5.0"
 
 [tool.poetry.dev-dependencies]
 safety = "^1.9.0"
