feat(contrib): init tool upload-kktix-ticket-csv-to-bigquery.py
The tool is used to upload the ticket information exported from kktix to
bigquery, and pre-process the "raw" data to be more bigquery friendly in
column naming of tables.

It's dangerous to upload data by default. So, we use dry-run mode by default.

We would like to make the column names as much consistent as possible
across years, so we use some heuristic. We may need to maintain the
heuristic annually. Luckily and ideally, the annual maintanence will be
one-off.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ description = ""
 authors = ["davidtnfsh <davidtnfsh@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7.1"
 requests = "^2.23.0"
 apache-airflow = {extras = ["google_auth"], version = "^1.10.13"}
 searchconsole = "^0.0.4"
 google-cloud-bigquery = "<2.8.0"
+pandas = "^1.2.3"
+pyarrow = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 safety = "^1.9.0"
